[gd_scene load_steps=28 format=2]

[ext_resource path="res://world/Richard.gd" type="Script" id=1]
[ext_resource path="res://characters/sprites/richard/richard-sitting.png" type="Texture" id=2]
[ext_resource path="res://characters/sprites/richard/richard-sitting-head.png" type="Texture" id=3]
[ext_resource path="res://game/fonts/HelvetiPixel.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://characters/sprites/richard/richard-realize.png" type="Texture" id=5]
[ext_resource path="res://game/sounds/queenA.ogg" type="AudioStream" id=6]
[ext_resource path="res://characters/sprites/richard/richard-getting-up.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 7 )
region = Rect2( 48, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 7 )
region = Rect2( 144, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 7 )
region = Rect2( 240, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 7 )
region = Rect2( 288, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 7 )
region = Rect2( 336, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 7 )
region = Rect2( 384, 0, 48, 64 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 1.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "realize",
"speed": 2.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": false,
"name": "get-up",
"speed": 7.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 29.0172

[sub_resource type="DynamicFont" id=6]
outline_size = 1
outline_color = Color( 0, 0, 1, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=20]
resource_name = "get_up"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodySprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, -12 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("BodySprite")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "get-up", false ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=7]
length = 1.1
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Label:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.1 ),
"transitions": PoolRealArray( 1.03219, 1, 1e-05, 1e-05 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0, 0.0 ]
}

[node name="Richard" type="KinematicBody2D"]
position = Vector2( 315, 86 )
scale = Vector2( 1.02072, 1 )
collision_layer = 2
collision_mask = 15
script = ExtResource( 1 )

[node name="HeadSprite" type="AnimatedSprite" parent="."]
z_index = 11
frames = SubResource( 2 )

[node name="BodySprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
build_mode = 1
polygon = PoolVector2Array( -8.81729, 0, -0.979706, 0, 4.8985, -3, 1.95941, -9, -4.8985, -9, -10.7767, -2 )

[node name="interactRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="interactRange"]
shape = SubResource( 5 )

[node name="Label" type="Label" parent="."]
margin_left = -26.4519
margin_top = -33.0
margin_right = 61.5481
margin_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = SubResource( 6 )
custom_constants/shadow_offset_x = 0
text = "test"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/get_up = SubResource( 20 )
anims/show_label = SubResource( 7 )

[node name="sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[connection signal="area_entered" from="interactRange" to="." method="_on_interactRange_area_entered"]
[connection signal="area_exited" from="interactRange" to="." method="_on_interactRange_area_exited"]
